--- a/myIonic/www/templates/about.html
+++ b/myIonic/www/templates/about.html
@@ -1,3 +1,14 @@
+<ion-header-bar align-title="left" class="bar-positive">
+  <div class="buttons">
+    <button class="button" ng-click="doSomething()">左侧按钮</button>
+  </div>
+
+  <h1 class="title">about</h1>
+
+  <div class="buttons">
+    <button class="button">右侧按钮</button>
+  </div>
+</ion-header-bar>
 <ion-view view-title="About">
     <ion-content class="padding">
       <p>
