--- a/myIonic/www/templates/tabs.html
+++ b/myIonic/www/templates/tabs.html
@@ -1,6 +1,6 @@
 <ion-tabs class="tabs-icon-top tabs-positive">
 
-  <ion-tab title="Home" icon="ion-home" href="#/tab/home">
+  <ion-tab title="首页" icon="ion-home" href="#/tab/home">
     <ion-nav-view name="home-tab"></ion-nav-view>
   </ion-tab>
   <ion-tab title="About" icon="ion-ios-information" href="#/tab/about">
