--- a/myIonic/www/myDemo/beer/templates/detail/goods-detail.html
+++ b/myIonic/www/myDemo/beer/templates/detail/goods-detail.html
@@ -1,8 +1,8 @@
  
 <ion-view title="简介" ng-controller="IntroCtrl">
   <ion-nav-buttons side="left">
-        <button class="button back-button buttons button-clear header-item" ng-click="$ionicHistory.goBack()">
-          <i class="ion-arrow-left-c"></i> 后退
+        <button class="button back-button buttons button-clear header-item"  ui-sref="tabs.home">
+          <i class="ion-arrow-left-c"></i> 返回
         </button>
       </ion-nav-buttons>  
 
