--- a/myIonic/www/myDemo/ion-nav/templates/card/tabs_facts.html
+++ b/myIonic/www/myDemo/ion-nav/templates/card/tabs_facts.html
@@ -8,9 +8,9 @@
     <p>A cockroach will live nine days without it's head, before it starves to death.</p>
     <p>Polar bears are left handed.</p>
     <p>
-      <a class="button icon ion-home" href="#/app/tab/home"> Home</a>
-      <a class="button icon icon-right ion-chevron-right" href="#/app/tab/facts2">More Facts</a>
-      <a class="button icon icon-right ion-chevron-right" href="#/app/facts3">More Facts3</a>
+      <a class="button icon ion-home" href="#/card/home"> Home</a>
+      <a class="button icon icon-right ion-chevron-right" href="#/card/facts2">More Facts</a>
+      <a class="button icon icon-right ion-chevron-right" href="#/facts4">More Facts4</a>
     </p>
   </ion-content>
 </ion-view>
