--- a/myIonic/www/myDemo/ion-nav/templates/card/tabs_facts4.html
+++ b/myIonic/www/myDemo/ion-nav/templates/card/tabs_facts4.html
@@ -1,7 +1,7 @@
 
-<ion-view title="Facts 3"  ng-controller="Fact3Ctrl" >
-  <ion-nav-buttons side="right">
-    <button>facts3 btn</button>
+<ion-view title="Facts 4"  ng-controller="Fact4Ctrl" >
+  <ion-nav-buttons side="left">
+    <button>facts4 btn</button>
   </ion-nav-buttons>
   <!--  <ion-nav-buttons side="left">
       <button class="button back-button buttons button-clear header-item" ng-click="$ionicGoBack()">
@@ -14,8 +14,8 @@
     <p>Facts3</p>
     <p>Facts3</p>
     <p>
-      <a class="button icon ion-home" href="#/tab/home"> Home</a>
-      <a class="button icon ion-chevron-left" href="#/tab/facts"> Scientific Facts</a>
+      <a class="button icon ion-home" href="#/card/home"> Home</a>
+      <a class="button icon ion-chevron-left" href="#/card/facts"> Scientific Facts</a>
     </p>
   </ion-content>
 </ion-view>
