--- a/myIonic/www/myDemo/ion-nav/templates/card/tabs_home.html
+++ b/myIonic/www/myDemo/ion-nav/templates/card/tabs_home.html
@@ -4,7 +4,7 @@
       navigate to child views of each tab and notice how
       each tab has its own navigation history.</p>
     <p>
-      <a class="button icon icon-right ion-chevron-right" href="#/app/tab/facts">Scientific Facts</a>
+      <a class="button icon icon-right ion-chevron-right" href="#/card/facts">Scientific Facts</a>
     </p>
 
 
