--- a/myIonic/www/myDemo/ion-nav/templates/tabs/tabs_about.html
+++ b/myIonic/www/myDemo/ion-nav/templates/tabs/tabs_about.html
@@ -10,7 +10,7 @@
       highly interactive apps.</p>
     <p>Built with Sass and optimized for AngularJS.</p>
     <p ng-if="aboutTab==1">
-      <a class="button icon icon-right ion-chevron-right" href="#/tab/navstack">Tabs Nav Stack</a>
+      <a class="button icon icon-right ion-chevron-right" href="#/tabs/navstack">Tabs Nav Stack</a>
     </p>
   </ion-content>
 </ion-view>
