--- a/myIonic/www/myDemo/beer/templates/intro/intro1.html
+++ b/myIonic/www/myDemo/beer/templates/intro/intro1.html
@@ -1,15 +1,15 @@
- 
+
 <ion-view title="简介" ng-controller="IntroCtrl">
   <ion-nav-buttons side="left">
-        <button class="button back-button buttons button-clear header-item" ng-click="$ionicHistory.goBack()">
+        <button class="button back-button buttons button-clear header-item" ng-click="goBack()">
           <i class="ion-arrow-left-c"></i> 后退
         </button>
-      </ion-nav-buttons>  
+      </ion-nav-buttons>
 
   <ion-content has-header="true" padding="true">
     <p>简介</p>
-    
-     
+
+
   </ion-content>
 </ion-view>
- 
+
