--- a/myIonic/www/myDemo/ion-nav/templates/card/tabs_facts2.html
+++ b/myIonic/www/myDemo/ion-nav/templates/card/tabs_facts2.html
@@ -5,8 +5,8 @@
     <p>101 Dalmatians, Peter Pan, Lady and the Tramp, and Mulan are the only Disney cartoons where both parents are
       present and don't die throughout the movie.</p>
     <p>
-      <a class="button icon ion-home" href="#/tab/home"> Home</a>
-      <a class="button icon ion-chevron-left" href="#/tab/facts"> Scientific Facts</a>
+      <a class="button icon ion-home" href="#/card/home"> Home</a>
+      <a class="button icon ion-chevron-left" href="#/card/facts"> Scientific Facts</a>
     </p>
   </ion-content>
 </ion-view>
