--- a/myIonic/www/myDemo/ion-nav/templates/tabs/tabs.html
+++ b/myIonic/www/myDemo/ion-nav/templates/tabs/tabs.html
@@ -1,10 +1,10 @@
 <ion-tabs class="tabs-stable tabs-icon-top">
 
-  <ion-tab title="Home" icon="ion-home" href="#/tab/home">
+  <ion-tab title="Home" icon="ion-home" href="#/tabs/home">
     <ion-nav-view name="home-tab" style="border: solid 2px #0F0;"  ></ion-nav-view>
   </ion-tab>
 
-  <ion-tab title="About" icon="ion-ios-information" href="#/tab/about">
+  <ion-tab title="About" icon="ion-ios-information" href="#/tabs/about">
     <ion-nav-view name="about-tab" style="border: solid 2px #00F;" ></ion-nav-view>
   </ion-tab>
 
