--- a/myIonic/www/myDemo/ion-nav/templates/tabs/facts3.html
+++ b/myIonic/www/myDemo/ion-nav/templates/tabs/facts3.html
@@ -1,10 +1,10 @@
 
 <ion-view title="Facts 3"  ng-controller="Fact3Ctrl" >
-<!--  <ion-nav-buttons side="left">
+   <ion-nav-buttons side="left">
     <button ng-click="goBack()" class="button back-button buttons button-clear header-item" >
-      <i class="ion-arrow-left-c"></i>
+      <i class="ion-arrow-left-c"></i>  {{backView}}
     </button>
-  </ion-nav-buttons>-->
+  </ion-nav-buttons>
 
   <ion-nav-buttons side="right">
   <!--  <button ng-click="goBack()">facts3 返回</button>-->
