--- a/myIonic/www/myDemo/ion-nav/templates/tabs/tabs_about.html
+++ b/myIonic/www/myDemo/ion-nav/templates/tabs/tabs_about.html
@@ -1,4 +1,4 @@
-<ion-view title="'About'" ng-controller="AboutCtrl">
+<ion-view title="'About'"  >
   <ion-nav-buttons side="right">
     <button class="button" ng-click="setNavTitle('香蕉')">
       点我（香蕉）
