--- a/myIonic/www/myDemo/ion-nav/templates/tabs/tabs.html
+++ b/myIonic/www/myDemo/ion-nav/templates/tabs/tabs.html
@@ -1,7 +1,11 @@
-<ion-tabs class="tabs-stable tabs-icon-top">
+<ion-tabs class="tabs-stable tabs-icon-top  {{$root.hideTabs}}"   >
 
   <ion-tab title="Home" icon="ion-home" href="#/tabs/home">
     <ion-nav-view name="home-tab" style="border: solid 2px #0F0;"  ></ion-nav-view>
+  </ion-tab>
+
+  <ion-tab title="List" icon="ion-ios-list" href="#/tabs/list">
+    <ion-nav-view name="list-tab" style="border: solid 2px #ffc520;" ></ion-nav-view>
   </ion-tab>
 
   <ion-tab title="About" icon="ion-ios-information" href="#/tabs/about">
