--- a/myIonic/www/tutorial/ion-slide-box/app.css
+++ b/myIonic/www/tutorial/ion-slide-box/app.css
@@ -7,5 +7,8 @@ body {
 .pink h1{color:#FFF;}
 
 
-.ion-record:before{color:#F00;}
+.slider-pager{text-align: right;padding-right: 20px; }
+.ion-record:before{color:#F00;box-sizing: border-box ;background-size: 1px;content:"·";font-size:30px;}
+
+
 
